# mediabase

./: .env.example  .env.test  .gitignore  .project2md.yml  CHANGELOG.md  CLAUDE.md  COLLEAGUE_SETUP_GUIDE.md  LICENSE  MIGRATION.md  README.md  WORKING_QUERY_EXAMPLES.sql  cancer_specific_sota_queries.sql  create_demo_patient_dbs.sh  legacy_sota_queries_for_patients.sql  mediabase.session.sql  normalized_cancer_specific_sota_queries.sql  normalized_sota_queries_for_patients.sql  project_summary.md  pyproject.toml  pytest.ini  setup_project.sh  setup_venv.sh  test_all_publication_fixes.py  test_chembl_publications.py  test_clinical_trials_integration.py  test_drugcentral_pmid_extraction.py  test_enhanced_publication_patterns.py  test_go_pmid_extraction.py  test_pharmgkb_pmid_extraction.py  test_publication_quality_scoring.py  working_sota_queries_for_patients.BROKEN.sql  working_sota_queries_for_patients.sql
.github/: copilot-instructions.md
config/: etl_sequence.py  evidence_scoring.yml  logging.yml  settings.py
docs/: AI_AGENT_INTEGRATION_GUIDE.md  BREAST_CANCER_HER2_GUIDE.md  CHEMBL_INTEGRATION_GUIDE.md  CLINICAL_INTERPRETATION_GUIDELINES.md  COLORECTAL_CANCER_GUIDE.md  CROSS_PATIENT_COMPARISON_QUERIES.sql  MEDIABASE_QUERY_LIBRARY.md  MEDIABASE_SCHEMA_REFERENCE.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_v0.6.0.md  OPENTARGETS_EXECUTIVE_SUMMARY.md  OPENTARGETS_IMPLEMENTATION_GUIDE.md  OPENTARGETS_INTEGRATION_PLAN.md  OPENTARGETS_PLATFORM_GUIDE.md  OPENTARGETS_QUERY_EXAMPLES.sql  OPENTARGETS_SCHEMA_DIAGRAM.md  PATIENT_DATABASE_GUIDE.md  PATIENT_DATASET_GUIDE.md  PATIENT_VALIDATION_QUERIES.sql  PERFORMANCE_BENCHMARK_RESULTS_v0.6.0.txt  PUBMED_ENRICHMENT_PLAN.md  QUERY_MIGRATION_GUIDE_v0.6.0.md  QUERY_OPTIMIZATION_GUIDE.md  RESTORE_INSTRUCTIONS.md  SOTA_QUERIES_GUIDE.md  TROUBLESHOOTING_GUIDE.md  VALIDATION_CHECKLIST_v0.6.0.md  WORKING_QUERY_EXAMPLES.sql  api.md  architecture.md  cancer_specific_sota_queries.sql  chembl_schema_documentation.txt  current_etl_issues.md  data_source_schemas.md  (+9 more)
(+160 files in other folders)
